first page images working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,13 @@
     Welcome to {{ title }}!
   </h1>
   <p> A Djinni has been bound to your device! It is safely trapped inside the digital realm. Touch the lamp to
-    awaken.</p>
+    awaken.
+  </p>
 
-  <br>
-  <button></button>
+  <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
+  <img src="/assets/public/images/genie-magic-lamp-6-4531.jpg" alt="Lamp">
   <p>Do not set it free.</p>
+</div>
 
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
