--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,12 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <p> A Djinni has been bound to your device! It is safely trapped inside the digital realm. Touch the lamp to
-    awaken.
-  </p>
+  <h4> A Djinni has been bound to your device! It is safely trapped inside the digital realm. Touch the lamp to
+    awaken. The Djinni can generate lottery numbers for you, save the numbers you play, and use game theory,
+    probability and statistics to help you make the best choices. The Djinni will also notify you of winnings if you
+    allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
+    them into the games you play!
+  </h4>
 
   <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
   <img src="/assets/public/images/genie-magic-lamp-6-4531.jpg" alt="Lamp">
