1st component the name of the genie, trying to get 2 way - data binding to work for the genies name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
     them into the games you play!
   </p>
+  <app-my-genie-name></app-my-genie-name>
 
   <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
   <img src="/assets/public/images/genie-magic-lamp-6-4531.jpg" alt="Lamp">
