front end changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 #LampPage{
-    background-color: #FAF9F7;
+    background-color: #FCFBF9;
     padding: 1%;
     margin: 1%;
-    border: 1px;
+    border: 2px;
     border-style: solid;
 }
