reverting to orginal opening picture with shadow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <app-my-genie-name></app-my-genie-name>
 
   <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
-  <img src="/assets/public/images/genie-magic-lamp-6-4531.jpg" alt="Lamp">
+  <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
   <p>Do not set it free.</p>
 </div>
 
