--- a/src/app/my-signup-form/my-signup-form.component.html
+++ b/src/app/my-signup-form/my-signup-form.component.html
@@ -7,4 +7,5 @@
     <input type="password" name="password" [(ngModel)]="password" required />
   </p>
   <button type="submit"> signup </button>
+  <button> Create new account </button>
 </form>
