--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
   <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
   <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
-  <p>Do not set it free.</p>
+  <p>Do not set it free. Play Responsibly</p>
 </div>
 
 
