--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="ui segment" id="LampPage" style="text-align:center">
+<!-- <div class="ui segment" id="LampPage" style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -8,14 +8,14 @@
     probability and statistics to help you make the best choices. The Djinni will also notify you of winnings if you
     allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
     them into the games you play! Click the Lamp to begin.
-  </p>
-  <app-my-genie-name></app-my-genie-name>
+  </p> -->
+<!-- <app-my-genie-name></app-my-genie-name> -->
 
-  <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
-  <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
+<!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
+<!-- <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
   <p>Do not set it free. Play Responsibly</p>
-</div>
+</div> -->
 
 
 <router-outlet></router-outlet>
-<app-my-signup-form></app-my-signup-form>
+<!-- <app-my-signup-form></app-my-signup-form> -->
