--- a/src/app/my-about/my-about.component.html
+++ b/src/app/my-about/my-about.component.html
@@ -1,3 +1,10 @@
-<p>
-  my-about works!
+<!-- <div class="ui segment" id="About" style="text-align:center"> -->
+<h1>
+  About the Genie
+</h1>
+<p> The Djinni can generate lottery numbers for you, save the numbers you play, and use game theory,
+  probability and statistics to help you make the best choices. The Djinni will also notify you of winnings if you
+  allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
+  them into the games you play! Click the Lamp to begin.
 </p>
+<!-- <app-my-genie-name></app-my-genie-name> -->
