--- a/src/app/my-home/my-home.component.html
+++ b/src/app/my-home/my-home.component.html
@@ -1,3 +1,20 @@
-<p>
-  my-home works!
-</p>
+<!--The content below is only a placeholder and can be replaced.-->
+
+<div class="ui segment" id="LampPage" style="text-align:center">
+    <h1>
+        Welcome to {{ title }}!
+    </h1>
+    <p> A Djinni has been bound to your device! It is safely trapped inside the digital realm. Touch the lamp to
+        awaken. Click the Lamp to begin.
+    </p>
+
+    <!-- <app-my-genie-name></app-my-genie-name> -->
+
+    <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
+    <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
+    <p>Do not set it free. Play Responsibly</p>
+    <button (click)="goToAbout()"> Tell me about the Genie </button>
+</div>
+<!-- 
+<router-outlet></router-outlet>
+<app-my-signup-form></app-my-signup-form> -->
