fixed about page up

--- a/src/app/my-about/my-about.component.html
+++ b/src/app/my-about/my-about.component.html
@@ -9,4 +9,6 @@
   allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
   them into the games you play! Play responsibly.
 </p>
-<!-- <app-my-genie-name></app-my-genie-name> -->
+
+<h2> Speak to the Genie directly</h2>
+<app-my-genie-name></app-my-genie-name>
