--- a/src/app/my-pick2-gen/my-pick2-gen.component.html
+++ b/src/app/my-pick2-gen/my-pick2-gen.component.html
@@ -1,3 +1,160 @@
-<p>
-  my-pick2-gen works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<link rel='stylesheet' href='/stylesheets/style.scss' />
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Pick 2</title>
+</head>
+<button class='btn' type="button" onclick="location.href='/dashBoard';"> Back </button>
+
+<h2>Fl Pick 2</h2>
+
+
+<body>
+
+
+
+  <div class="ui segment" id="Pick-2-Number-Gen-Total-Container">
+
+
+
+    <script src='/javascripts/script.js'></script>
+    <div class="ui segment">
+      <h2>Pick-2 Number Generator</h2>
+
+    </div>
+
+
+    <div class="ui segment" id="Pick2Rules">
+      <h3>Rules </h3>
+      <p>1. Select one number (from 0 through 9) from each column for a total of two digits</p>
+      <br>
+      <button class="btn2" onclick=""> I wish to know more</button>
+    </div>
+
+
+
+    <div class="ui segment" id='Pick-2-Game-Area'>
+      <button class='btn2' onclick="randomGenMaster22()"> Give me a number! </button>
+      <button class='btn2' onclick="saveNumber22()"> I will play this Number, save it
+      </button>
+      <button class='btn2' class='Dontplaythisnumber' onclick="randomGenMaster22(2)"> I don't like this
+        number, give me
+        another </button>
+
+
+      <div class="ui segment" id="Pick-2-Card-Container">
+        <h1 class="Pick-2-Card" id="Pick-2[1]"> 0 </h1>
+        <h1 class="Pick-2-Card" id="Pick-2[2]"> 0 </h1>
+
+      </div>
+    </div>
+
+    <div class="ui segment" id='pick2SavedNumbers'>
+
+      <h2> Saved Numbers</h2>
+
+      <h2>Click save numbers to save a list
+
+        <div class="ui segment" id="Pick-2Played-Numbers-Box">
+          <img id="Pick-3-Genie" src='/images/geniworkinge2.jpg'>
+        </div>
+      </h2>
+
+    </div>
+    <button class='btn2' onclick="location.href='/yourNumbers'" method="/POST">Post it</button>
+
+
+
+    <div class="ui segment" id="Pick2-Odds-Advice-Container">
+      <div class="ui segment" id="Pick2-Odds">
+        <h2>Odds</h2>
+        <h3>
+          <b>Pick 2</b>
+        </h3>
+        <p> You have a 1/100 chance of winning 25$ with a strait matching both numbers, and a 1/25 odds
+          of
+          hitting
+          a one-off
+          number on either and/or both numbers for a $3.00 payout.
+        </p>
+        <button class='btn2'> Tell me more </button>
+      </div>
+
+
+
+      <div class="ui segment" id="Pick2-Advice">
+        <h2>Genie Advice</h2>
+        <h3>
+          <b>Play 1-Off</b>
+        </h3>
+        <p> You can miss by one and still win a cash prize. That's 8 more chances to win.
+        </p>
+
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+</body>
+
+
+
+
+<script>
+  Pick2NumbersPlayed = [];
+  newlistpick2 = [];
+
+  const randomGenMaster22 = function () {
+    let print1 = document.getElementById('Pick-2[1]');
+    let print2 = document.getElementById('Pick-2[2]');
+
+
+    let num1 = Math.floor(Math.random() * 10);
+    let num2 = Math.floor(Math.random() * 10);
+
+
+    print1.innerHTML = num1;
+    print2.innerHTML = num2;
+    y2 = num1
+    x2 = num2
+    console.log(num1, num2);
+
+
+
+    document.getElementById('Pick-2[1]').innerHTML = num1;
+    document.getElementById('Pick-2[2]').innerHTML = num2;
+  };
+
+
+
+  const saveNumber22 = function () {
+    Pick2NumbersPlayed.push(y2, x2);
+    console.log(Pick2NumbersPlayed);
+    document.getElementById("Pick-2Played-Numbers-Box").innerHTML = "  -  " + Pick2NumbersPlayed + " - "
+
+  }
+
+  const pic2PostIt = function () { }
+
+
+
+
+
+</script>
