--- a/src/app/my-pick2-gen/my-pick2-gen.component.scss
+++ b/src/app/my-pick2-gen/my-pick2-gen.component.scss
@@ -71,7 +71,7 @@
     width: 80%;
     display: flex;
     flex-wrap: nowrap;
-    background-color: rgb(140, 203, 255);
+    background-color: rgb(133, 165, 190);
     border: 2px;
     border-style: solid;
     border-color: black;
@@ -94,6 +94,7 @@
   #pick2SavedNumbers {
     border: 2px;
     border-style: solid;
+    width: 75%;
     padding: 1%;
     margin: 1%;
     background-color: rgb(219, 188, 255);
