--- a/src/app/auth/my-login-form/my-login-form.component.html
+++ b/src/app/auth/my-login-form/my-login-form.component.html
@@ -1,24 +1,29 @@
-<div id="nav-container">
-  <h3 id="home"><a>Home</a> </h3>
-  <h3 id="about"><a>About</a> </h3>
+<div style="text-align:center" id="nav-container">
+  <h3 id="home"><a>Home</a> <a> &middot; About</a> </h3>
+
+
 </div>
 
 <body>
-  <div id="loginBox">
+  <div style="text-align:center" id="loginBox">
     <div class="two fields">
       <div class="field">
         <h1> Log in to The Lottery Genie</h1>
         <label></label>
         <input id="loginField" [(ngModel)]="user.username" name="username" placeholder="Username" type="text">
       </div>
-      <div class="field">
+      <div style="text-align:center" class="field">
         <label></label>
         <input id="passwordField" [(ngModel)]="user.password" name="password" placeholder="Password" type="password">
+        <br>
         <button (click)="login()"><b>Login</b></button>
-        <input type="checkbox" value="1" name="remember_me" id="remember">
-        <div id="rememberme"> Remember Me <a> Forgot Password?</a> </div>
+
+
+        <div id="rememberme"> Remember Me <input type="checkbox" value="1" name="remember_me" id="remember">
+          <br><a> Forgot
+            Password?</a> </div>
       </div>
-      <div id="extension">
+      <div style="text-align:center" id="extension">
         <p id="newToTwitterTxt">New to The Lottery Genie? <a>Sign up now »</a> <br>
           <br></p>
       </div>
