--- a/src/app/Games/Game-Rules/my-pick2-rules/my-pick2-rules.component.html
+++ b/src/app/Games/Game-Rules/my-pick2-rules/my-pick2-rules.component.html
@@ -1,4 +1,6 @@
+<!-- odds secion -->
 <div class="ui segment" id="Pick2-Odds-Advice-Container">
+
   <div class="ui segment" id="Pick2-Odds">
     <h2>Odds</h2>
     <h3>
@@ -14,7 +16,7 @@
   </div>
 
 
-
+  <!-- pick2 genie advice -->
   <div class="ui segment" id="Pick2-Advice">
     <h2>Genie Advice</h2>
     <h3>
