--- a/src/app/auth/my-login-form/my-login-form.component.html
+++ b/src/app/auth/my-login-form/my-login-form.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center" id="nav-container">
-  <h3 id="home"><a>Home</a> <a> &middot; About</a> </h3>
+  <h3 id="home"><a href="/home">Home</a> <a href="/about"> &middot; About</a> </h3>
 
 
 </div>
@@ -25,7 +25,7 @@
       </div>
       <br>
       <div style="text-align:center" id="extension">
-        <p id="newToTwitterTxt">New to The Lottery Genie? <a>Sign up now »</a> <br>
+        <p> New to The Lottery Genie? <a href="/signup">Sign up now »</a> <br>
           <br></p>
       </div>
     </div>
