--- a/src/app/auth/my-signup-form/my-signup-form.component.html
+++ b/src/app/auth/my-signup-form/my-signup-form.component.html
@@ -1,3 +1,5 @@
+<a href="home"> back</a>
+
 <h1>Welcome to The Lottery Genie, Please sign in</h1>
 <form (ngSubmit)="submitForm(myForm)" #myForm="ngForm">
   <p> Username
