--- a/src/app/my-about/my-about.component.html
+++ b/src/app/my-about/my-about.component.html
@@ -1,14 +1,18 @@
-<!-- <div class="ui segment" id="About" style="text-align:center"> -->
-<h1>
-  About the Genie
-</h1>
-<p> The Djinni can generate game specific lottery numbers for you, save the numbers you play, and use game theory,
-  probability and statistics to help you make the best choices. The genie will also tell you about the rules of the
-  game and different ways to win in detail.
-  The Djinni will also notify you of winnings if you
-  allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
-  them into the games you play! Play responsibly.
-</p>
+<!-- <button onclick="goToHome()"> Back </button> -->
+<a href="/home"> Home </a>
 
-<h2> Speak to the Genie directly</h2>
-<app-my-genie-name></app-my-genie-name>
+
+<div class="ui segment" id="About" style="text-align:center">
+  <h1>
+    About the Genie
+  </h1>
+  <p> The Djinni can generate game specific lottery numbers for you, save the numbers you play, and use game theory,
+    probability and statistics to help you make the best choices. The genie will also tell you about the rules of the
+    game and different ways to win in detail.
+    The Djinni will also notify you of winnings if you
+    allow push notifications, and it will keep track of your favorite numbers and give you unique ways to incorporate
+    them into the games you play! Play responsibly.
+  </p>
+
+  <h2> Speak to the Genie directly</h2>
+  <app-my-genie-name></app-my-genie-name>
