--- a/src/app/my-home/my-home.component.html
+++ b/src/app/my-home/my-home.component.html
@@ -11,9 +11,10 @@
     <!-- <app-my-genie-name></app-my-genie-name> -->
 
     <!-- <div class="item" style="background-image: url('../images/genie-magic-lamp-6-4531.jpg');"></div> -->
-    <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp">
+    <img src="/assets/public/images/genie-magic-lamp-6-4531 withbackground.jpg" alt="Lamp" (click)="goToLogin()">
     <p>Do not set it free. Play Responsibly</p>
     <button (click)="goToAbout()"> Tell me about the Genie </button>
+
 </div>
 <!-- 
 <router-outlet></router-outlet>
